--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -47,7 +47,7 @@
 #loginBtn {
     padding: 10px;
     color: white;
-    background-color: #31b372;
+    background-color: #4cbed5;
     border: 0;
     /* margin-top: 40px; */
     margin-right: 20px;
